Evaluate json serialization